--- a/MySQL.Data/src/MySql.Data.csproj
+++ b/MySQL.Data/src/MySql.Data.csproj
@@ -1,4 +1,4 @@
-<Project>
+﻿<Project>
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
 
   <PropertyGroup>
@@ -8,11 +8,10 @@
     <Version>8.1.0</Version>
     <Authors>Oracle</Authors>
     <AssemblyName>MySql.Data</AssemblyName>
-    <TargetFrameworks>netstandard2.0;netstandard2.1;net6.0;net7.0;</TargetFrameworks>
-    <PackageId>MySql.Data</PackageId>
+    <TargetFrameworks>netstandard2.1;net6.0</TargetFrameworks>
+    <PackageId>Scopely.MySql.Data</PackageId>
     <PackageTags>MySql;.NET Connector;MySql Connector/NET;netcore;.Net Core;MySql Conector/Net Core;coreclr;C/NET;C/Net Core</PackageTags>
     <PackageReleaseNotes>Review ReleaseNotes.txt for details.</PackageReleaseNotes>
-    <PackageIcon>logo-mysql-170x115.png</PackageIcon>
     <PackageProjectUrl>https://dev.mysql.com/downloads/</PackageProjectUrl>
     <PackageLicenseExpression>GPL-2.0-only</PackageLicenseExpression>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
@@ -32,10 +31,6 @@
     <LangVersion>latest</LangVersion>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
-
-  <ItemGroup>
-    <None Include="..\..\Nuget\Data\images\logo-mysql-170x115.png" Pack="true" PackagePath="\" />
-  </ItemGroup>
 	
   <ItemGroup>
     <EmbeddedResource Include="Properties\ReservedWords.txt" />
